# steam_recommender_system

./: .gitignore  LICENSE  README.md  pyproject.toml  steam_recommender.py
1. data_collection/: main.py
1. data_collection/steam_scraper/: __init__.py  games.py  games_detail.py  users.py  users_detail.py
2. data_processing/: steam_db.py
3. data_analysis/: steam.ipynb
4. model/: 0_db_for_predictions.py  collaborative_filtering_als.py  collaborative_filtering_cornac.py  collaborative_filtering_cornac_deep_learning..py  collaborative_filtering_cornac_mlp.py  collaborative_filtering_cornac_pmf.py  collaborative_filtering_surprise.py  content_based_cornac_cvae.py  content_based_cornac_hft.py  content_based_sklearn_tfidf.py
5. predictions/: collaborative_filtering_cornac_deep_learning_prediction.py  collaborative_filtering_cornac_prediction.py  collaborative_filtering_surprise_prediction.py  content_based_cornac_cvae_prediction.py  content_based_sklearn_tfidf_prediction.py  final_evaluation.py  main.py  precision_at_10.py  recommender.py
5. predictions/recommender_system/: load_dataset.py  load_models.py  predict.py
recommender_system/: __init__.py  load_dataset.py  load_models.py  predict.py
