[project]
name = "steam-recommender-system"
version = "0.1.0"
description = "Steam Recommender System develop by Elas Cid Perez as part of the MBA in Artificial Intelligence and Big Data from Universidade de São Paulo (USP)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "cornac==2.2.2",
    "dill>=0.4.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.1",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "pyspark>=4.0.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scikit-surprise>=1.1.4",
    "seaborn>=0.13.2",
    "streamlit>=1.46.1",
    "tensorflow==2.17.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]